@@ -107,7 +107,7 @@ Last-Update: 2017-07-07
 -  38656, };
 +  39424, };
  
- const utf8proc_uint16_t utf8proc_stage2table[] = {
+ static const utf8proc_uint16_t utf8proc_stage2table[] = {
    1, 2, 2, 2, 2, 2, 2, 
 @@ -1992,8 +1992,8 @@
    1156, 1156, 1156, 1156, 1156, 1156, 1156, 1156, 
@@ -3350,7 +3350,7 @@ Last-Update: 2017-07-07
 +  3985, 3985, 3985, 3985, 3985, 3985, 3985, 0, 
    0, };
  
- const utf8proc_property_t utf8proc_properties[] = {
+ static const utf8proc_property_t utf8proc_properties[] = {
 @@ -9055,8 +9151,9 @@
    {UTF8PROC_CATEGORY_SO, 0, UTF8PROC_BIDI_CLASS_L, UTF8PROC_DECOMP_TYPE_CIRCLE, 25, UINT16_MAX, 8746, UINT16_MAX, 8746, UINT16_MAX, false, false, false, false, 2, 0, UTF8PROC_BOUNDCLASS_OTHER},
    {UTF8PROC_CATEGORY_NO, 0, UTF8PROC_BIDI_CLASS_ON, UTF8PROC_DECOMP_TYPE_CIRCLE, 2775, UINT16_MAX, UINT16_MAX, UINT16_MAX, UINT16_MAX, UINT16_MAX, false, false, false, false, 2, 0, UTF8PROC_BOUNDCLASS_OTHER},
