@@ -6,6 +6,7 @@ utf8proc (2.1.1-1) UNRELEASED; urgency=medium
   [ Graham Inggs ]
   * New upstream release
   * Update upstream URLs for move to JuliaStrings
+  * Refresh patches
 
  -- Graham Inggs <ginggs@debian.org>  Sat, 07 Jul 2018 08:30:46 +0000
 
